--- a/hotel_reservations - Copia GitHub.ipynb
+++ b/hotel_reservations - Copia GitHub.ipynb
@@ -2822,7 +2822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### RISULTATI SECONDO TEST (con MLPC, Log Regr, KNN: classification, SVC ma senza gamma e senza degree)\n",
+    "##### RISULTATI TERZO TEST (con MLPC, Log Regr, KNN: classification, SVC ma senza gamma e senza degree)\n",
     "\n",
     "*migliori parametri risultanti* :  {'clf': KNeighborsClassifier(algorithm='kd_tree', n_neighbors=9, weights='distance'), 'clf__algorithm': 'kd_tree', 'clf__n_neighbors': 9, 'clf__weights': 'distance'}\n",
     "\n",
